--- a/src/main/resources/templates/companies/add-company.html
+++ b/src/main/resources/templates/companies/add-company.html
@@ -2,25 +2,25 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Candidates</title>
+    <title>Companies</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
 <div th:replace="navbar/navbarHome"></div>
-<h1 th:align="center">ADD NEW CANDIDATE</h1>
+<h1 th:align="center">ADD NEW COMPANY</h1>
 <div class="container">
-    <form class="container" action="#" th:action="@{/candidates/add}" th:object="${candidate}" method="post">
+    <form class="container" action="#" th:action="@{/company/add}" th:object="${company}" method="post">
         <div class="row mb-3">
             <label for="name" class="col-sm-1 col-form-label">Name</label>
             <div class="col-sm-11">
-                <input type="text" class="form-control col-12" id="name" th:field="*{fullName}">
+                <input type="text" class="form-control col-12" id="name" th:field="*{name}">
             </div>
         </div>
         <div class="row mb-3">
-            <label for="dob" class="col-sm-1 col-form-label">DOB</label>
+            <label for="webUrl" class="col-sm-1 col-form-label">WebURL</label>
             <div class="col-sm-11">
-                <input type="date" class="form-control col-12" id="dob" th:field="*{dob}">
+                <input type="url" class="form-control col-12" id="webUrl" th:field="*{webURL}">
             </div>
         </div>
         <div class="row mb-3">
@@ -33,6 +33,12 @@
             <label for="inputEmail3" class="col-sm-1 col-form-label">Email</label>
             <div class="col-sm-11">
                 <input type="email" class="form-control col-12" id="inputEmail3" th:field="*{email}">
+            </div>
+        </div>
+        <div class="row mb-3">
+            <label for="about" class="col-sm-1 col-form-label">About</label>
+            <div class="col-sm-11">
+                <input type="text" class="form-control col-12" id="about" th:field="*{about}">
             </div>
         </div>
 
@@ -67,8 +73,8 @@
             </div>
         </div>
         <br/>
-        <div class="d-grid gap-2 col-3 mx-auto">
-            <input class="btn btn-primary" type="submit" value="Add Candidate">
+        <div class="d-grid gap-2 col-3 mx-auto my-2 py-2">
+            <input class="btn btn-primary col-12" type="submit" value="Add Company">
         </div>
     </form>
 </div>
