--- a/src/main/resources/templates/navbar/navbarHome.html
+++ b/src/main/resources/templates/navbar/navbarHome.html
@@ -2,13 +2,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Candidate</a>
+                <a class="nav-link" th:href="@{/candidates(size=30,page=1)}">Candidate</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Company</a>
+                <a class="nav-link" th:href="@{/company(size=30,page=1)}">Company</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Job</a>
+                <a class="nav-link" th:href="@{/job(size=30,page=1)}">Job</a>
             </li>
         </ul>
     </div>
