--- a/src/main/resources/templates/candidates/candidates.html
+++ b/src/main/resources/templates/candidates/candidates.html
@@ -12,7 +12,7 @@
     <h2 th:case="null">No candidates yet!</h2>
     <div th:case="*">
         <h2>Candidates</h2>
-        <table class="table table-striped table-hover ">
+        <table class="table table-striped table-hover table-bordered">
             <thead>
             <tr>
                 <th>Id</th>
