--- a/src/main/resources/templates/navbar/navbarCandidate.html
+++ b/src/main/resources/templates/navbar/navbarCandidate.html
@@ -2,16 +2,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/candidates/findJob(id=${session.candidateId})}">Tìm việc</a>
+                <a class="nav-link" th:href="@{/candidates/findJob(id=${session.candidateId},size=10, page=1)}">Tìm việc</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/candidates/skill}">Skill</a>
+                <a class="nav-link" th:href="@{/candidates/suggest-skill(id=${session.candidateId})}">Kỹ năng cần học</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/candidates/learn-skill(id=${session.candidateId})}">Kỹ năng đã học</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/candidates/experience}">Experience</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/candidates/logout}">Logout</a>
+                <a class="nav-link" th:href="@{/candidates/logout}">Đăng xuất</a>
             </li>
         </ul>
     </div>
