--- a/src/main/resources/templates/candidates/find-job.html
+++ b/src/main/resources/templates/candidates/find-job.html
@@ -12,7 +12,7 @@
 
 <div th:replace="navbar/navbarCandidate"></div>
 
-<h1 class="text-center">LIST JOB</h1>
+<h1 class="text-center">SUITABLE JOBs</h1>
 <table class="table table-striped table-hover w-75 mx-auto table-bordered">
     <thead>
     <tr>
@@ -33,11 +33,11 @@
 </table>
 
 <div class="text-center">
-    <a class="p-1" th:href="@{/candidates/login(id=${candidate.id},size=${jobPage.size}, page=1)}"> << </a>
-    <a class="p-1" th:href="@{/candidates/login(id=${candidate.id},size=${jobPage.size}, page=${jobPage.number})}"> < </a>
+    <a class="p-1" th:href="@{/candidates/findJob(id=${candidate.id},size=${jobPage.size}, page=1)}"> << </a>
+    <a class="p-1" th:href="@{/candidates/findJob(id=${candidate.id},size=${jobPage.size}, page=${jobPage.number})}"> < </a>
     <label th:text=" ${jobPage.number+1} " class="p-2"></label>
-    <a class="p-1" th:href="@{/candidates/login(id=${candidate.id},size=${jobPage.size}, page=${jobPage.number}+2)}"> > </a>
-    <a class="p-1" th:href="@{/candidates/login(id=${candidate.id},size=${jobPage.size}, page=${jobPage.totalPages})}"> >> </a>
+    <a class="p-1" th:href="@{/candidates/findJob(id=${candidate.id},size=${jobPage.size}, page=${jobPage.number}+2)}"> > </a>
+    <a class="p-1" th:href="@{/candidates/findJob(id=${candidate.id},size=${jobPage.size}, page=${jobPage.totalPages})}"> >> </a>
 </div>
 
 
